--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>t111</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+          <link href="//cdn.bootcss.com/normalize/4.1.1/normalize.css" rel="stylesheet">
   </head>
   <style>
   	html{
 	font-size: calc(100vw/3.75);
 }
 body{
-	font-size: 0.18rem;
+	font-size: 0.15rem;
 }
   </style>
   <body >
