--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>t111</title>
+    <title>3</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
           <link href="//cdn.bootcss.com/normalize/4.1.1/normalize.css" rel="stylesheet">
+          <!-- <script src='src/main.js'></script> -->
   </head>
   <style>
   	html{
